--- a/src/app/tech-dairy/tech-dairy.component.html
+++ b/src/app/tech-dairy/tech-dairy.component.html
@@ -64,14 +64,31 @@
   <p-card class="p-col-3" styleClass="card-container" header="Daily visits">
     <ul>
       <li>
-        <a href="https://subscription.packtpub.com/">Packtpub</a>
+        <a href="https://subscription.packtpub.com/" target="_blank"
+          >Packtpub</a
+        >
+      </li>
+      <li>
+        <a href="https://css-tricks.com/" target="_blank">CSS tricks</a>
       </li>
     </ul>
   </p-card>
+  <p-card class="p-col-3" styleClass="card-container" header="On Stage">
+    <ul>
+      <li>
+        <a href="https://mailchimp.com/" target="_blank"
+          >Mailchimp for mail related (SMTP)</a
+        >
+      </li>
+      <!-- <li>
+        <a href="https://css-tricks.com/" target="_blank">CSS tricks</a>
+      </li> -->
+    </ul>
+  </p-card>
   <p-card
-    class="p-col-4"
+    class="p-col-3"
     styleClass="card-container"
-    header="Frameworks Tools and libraries"
+    header="Frameworks , Tools and libraries"
   >
     <ul>
       <li>
@@ -89,6 +106,9 @@
       <li>
         <a href="https://www.typescriptlang.org/">Typescript</a>
       </li>
+      <li>
+        <a href="https://www.ag-grid.com/">ag-Grid</a>
+      </li>
     </ul>
   </p-card>
 
@@ -101,5 +121,45 @@
   </p-card> -->
   <p-card class="p-col-3" header="My Bookmarks" styleClass="card-container">
     <app-technical-references></app-technical-references>
+  </p-card>
+  <!-- <p-card class="p-col-3" header="CI/CD" styleClass="card-container"> </p-card> -->
+
+  <p-card
+    class="p-col-3"
+    styleClass="card-container"
+    header="Interview Questions MCQ"
+  >
+    <ul>
+      <li>
+        <a href="https://www.onlineinterviewquestions.com/angular-2-mcq/"
+          >Angular</a
+        >
+      </li>
+      <li>
+        <a href="https://www.vskills.in/practice/angular-6-mock-test"
+          >Angular 6 mock test</a
+        >
+      </li>
+      <li>
+        <a href="https://www.vskills.in/practice/angular-7-practice-questions"
+          >Angular 7 Practice Questions</a
+        >
+      </li>
+      <!--<li>
+        <a href=""
+          ></a
+        >
+      </li>
+      <li>
+        <a href=""
+          ></a
+        >
+      </li> 
+      <li>
+        <a href=""
+          ></a
+        >
+      </li> -->
+    </ul>
   </p-card>
 </div>
