more links added

--- a/src/app/tech-dairy/tech-dairy.component.html
+++ b/src/app/tech-dairy/tech-dairy.component.html
@@ -71,6 +71,12 @@
       <li>
         <a href="https://css-tricks.com/" target="_blank">CSS tricks</a>
       </li>
+      <li>
+        <a href="https://dzone.com/" target="_blank">Dzone</a>
+      </li>
+      <li>
+        <a href="https://vishwanathph.atlassian.net">myJira</a>
+      </li>
     </ul>
   </p-card>
   <p-card class="p-col-3" styleClass="card-container" header="On Stage">
