updated the projects

--- a/src/app/industry-projects/industry-projects.component.html
+++ b/src/app/industry-projects/industry-projects.component.html
@@ -51,8 +51,8 @@
     This is a <b>Health care application</b> which is used for B2C and B2B
     clients, Where B2B clients can enroll a pricing and get paid for the
     services and B2C clients can enroll for Services and paid amount for
-    provided services My role is <b>Angular developer </b> and unit testing
-    using <b>Karma/Jasmine</b>.
+    provided services My role is <b>React developer </b> and unit testing using
+    <b>Karma/Jasmine</b>.
   </p-card>
 
   <p-card class="p-col-12" styleClass="card-container" header="Belgacom">
@@ -74,7 +74,7 @@
     <b>Application developer</b> and responsiblity is to create
     <b>Data visualization dashboard</b> The dashboard is designed to be
     responsive, and the targets are Mobiles and Tablets. The Front end is
-    <b>Angular.js</b> and <b>Node.js</b> is used as middleware to serve
+    <b>React.js</b> and <b>Node.js</b> is used as middleware to serve
     statistical data to frontend .<b>Bootstrap 3</b> is used for responsive
     design
   </p-card>
