--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -18,7 +18,7 @@
       </li>
       <li>
         4 experience developing JavaScript Apps. Backend (Node.js) and frontend
-        (AngularJS, Angular, React)
+        (Angular, React)
       </li>
     </ul>
     <h3>Industry Experience</h3>
@@ -30,7 +30,7 @@
       <img
         width="10%"
         height="30%"
-        style="vertical-align: middle;"
+        style="vertical-align: middle"
         src="assets\wipro.jpg"
         class="p-col-2"
       />
@@ -38,7 +38,7 @@
       <img
         width="100%"
         height="50%"
-        style="vertical-align: middle;"
+        style="vertical-align: middle"
         src="assets\USTGlobal.png"
         class="p-col-2"
       />
@@ -46,7 +46,7 @@
       <img
         width="100%"
         height="50%"
-        style="vertical-align: middle;"
+        style="vertical-align: middle"
         src="assets\accenture.png"
         class="p-col-2"
       />
@@ -54,21 +54,21 @@
       <img
         width="100%"
         height="40%"
-        style="vertical-align: middle;"
+        style="vertical-align: middle"
         src="assets\ge.jpg"
         class="p-col-1"
       />
 
       <img
         width="40"
-        style="vertical-align: middle;"
+        style="vertical-align: middle"
         src="assets\Tech-mahindra.png"
         class="p-col-2"
       />
 
       <img
         width="40"
-        style="vertical-align: middle;"
+        style="vertical-align: middle"
         src="assets\Aricent-Technologies.png"
         class="p-col-2"
       />
@@ -86,7 +86,7 @@
       </li>
       <li>
         experience in Node.js Full stack development (Node.js, Angular
-        (v2,v4,v6)) of Monolithic and Microservice apps .
+        (v2,v4,v6) ,React.js) of Monolithic and Microservice apps .
       </li>
       <li>Experience in developing SSO Applications Using Node.js.</li>
       <li>Experience in developing Restful services using Node.js.</li>
@@ -94,7 +94,6 @@
         Experience in developing Microservices using Seneca Microservice
         framework in Node.js.
       </li>
-      <li>Having experience on react.js</li>
     </ul>
     <h3>Tutoring</h3>
     <ul>
@@ -102,6 +101,7 @@
       <li>Javascript</li>
       <li>Node.js</li>
       <li>Angular</li>
+      <li>React.js</li>
       <li>MongoDB</li>
       <li>OOAD and Design Patterns</li>
     </ul>
