--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -11,21 +11,13 @@
 <p></p>
 <!-- <app-industry-projects></app-industry-projects> -->
 <p-tabView>
-  <p-tabPanel
-    header="Industry Projects"
-    leftIcon="pi-bell-"
-    rightIcon="pi-bookmark"
-  >
+  <p-tabPanel header="Industry Projects">
     <app-industry-projects></app-industry-projects>
   </p-tabPanel>
-  <p-tabPanel header="POCs" leftIcon="pi-bell-" rightIcon="pi-bookmark">
+  <p-tabPanel header="POCs">
     <app-poc></app-poc>
   </p-tabPanel>
-  <p-tabPanel
-    header="Non-Industry/Freelance/support Projects"
-    leftIcon="pi-bell-"
-    rightIcon="pi-bookmark"
-  >
+  <p-tabPanel header="Non-Industry/Freelance/support Projects">
     <app-freelance-projects></app-freelance-projects>
   </p-tabPanel>
 </p-tabView>
