updated my experience

--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -2,87 +2,83 @@
   <p-card class="p-col-6" styleClass="card-container">
     <h3>About me</h3>
     <p>
-      I am a Technical evangelist having 9+ years of industry experience .I have
+      I am a Technical evangelist having 12+ years of industry experience .I have
       take up freelance assignments and also tutored on JavaScript technologies.
     </p>
     <h3>Career</h3>
     <p>
-      Overall, 9 Years of Application development experience using Java, HTML,
+      Overall, 12 Years of Application development experience using Java, HTML,
       CSS, JavaScript, and XML
       <br />
     </p>
     <ul>
       <li>
-        5+ experience on Java Application development JSP, Servlets, Swing,
-        Restful services, XML, PostgreSQL.
-      </li>
-      <li>
-        4 experience developing JavaScript Apps. Backend (Node.js) and frontend
+        7+ experience developing JavaScript Apps. Backend (Node.js) and frontend
         (Angular, React)
       </li>
+      <li>
+        5+ experience on Java Application development using Java Spring , JSP, Servlets, Swing,
+        Restful services, XML, PostgreSQL.
+      </li>
+      
     </ul>
     <h3>Industry Experience</h3>
     <p>
-      Over the period of 9 years i had pleasure and greater experience with the
+      Over the period of 12 years i had pleasure and greater experience with the
       below companies
     </p>
     <div class="p-grid p-align-center">
       <img
-        width="10%"
-        height="30%"
+      style="vertical-align: middle"
+      src="assets\IBM.png"
+      class="p-col-2"
+    />
+
+      <img
         style="vertical-align: middle"
         src="assets\wipro.jpg"
         class="p-col-2"
       />
 
       <img
-        width="100%"
-        height="50%"
         style="vertical-align: middle"
         src="assets\USTGlobal.png"
         class="p-col-2"
       />
 
       <img
-        width="100%"
-        height="50%"
         style="vertical-align: middle"
         src="assets\accenture.png"
         class="p-col-2"
       />
 
       <img
-        width="100%"
-        height="40%"
         style="vertical-align: middle"
         src="assets\ge.jpg"
         class="p-col-1"
       />
 
       <img
-        width="40"
         style="vertical-align: middle"
         src="assets\Tech-mahindra.png"
         class="p-col-2"
       />
 
       <img
-        width="40"
         style="vertical-align: middle"
         src="assets\Aricent-Technologies.png"
         class="p-col-2"
       />
     </div>
     <h3>Technical Experience</h3>
-    I have experience developing system software’s using core Java till 2014,
-    where the transition happened to JavaScript technologies and from there i
-    have been working as a NodeJS full stack developer. I have experience in
-    following areas
+    I have experience developing java application using Core Java and Java Spring ,
+    and also has extensive experience in JavaScript technologies and has been working
+    as a NodeJS full stack developer. I have experience in following areas
 
     <ul>
       <li>
-        experience on Java Application development JSP, Servlets, Swing, Restful
-        services, XML, PostgreSQL
+        experience on Java Application development using Java Spring, JSP, Servlets, Swing, Restful
+        services,  XML, PostgreSQL
       </li>
       <li>
         experience in Node.js Full stack development (Node.js, Angular
@@ -90,6 +86,7 @@
       </li>
       <li>Experience in developing SSO Applications Using Node.js.</li>
       <li>Experience in developing Restful services using Node.js.</li>
+      <li>Experience in developing Restful services using Spring Boot.</li>
       <li>
         Experience in developing Microservices using Seneca Microservice
         framework in Node.js.
