--- a/src/app/industry-projects/industry-projects.component.html
+++ b/src/app/industry-projects/industry-projects.component.html
@@ -1,4 +1,34 @@
 <div class="p-grid">
+
+  <p-card
+    class="p-col-12"
+    styleClass="card-container"
+    header="Employee Management System "
+  >
+  This is an Employee management application which has different components which includes employee talent  management application, Internal job transfer application  , etc .
+   My Role is <b> Team Lead </b> where backend API services is developed using <b>Java Spring Boot and PostgreSQL </b> .
+    The front end is developed using <b>React.js</b>.
+  </p-card>
+
+  <p-card
+    class="p-col-12"
+    styleClass="card-container"
+    header="Purchase Squad  "
+  >
+  This is a Node.js microservice which provides api to the beauty products retail E-commerce application. 
+  My Role is to develop microservice for basket management using <b>Node.js (express.js)</b>.
+  </p-card>
+
+  <p-card
+    class="p-col-12"
+    styleClass="card-container"
+    header="Infinity – Fulfillment Platform  "
+  >
+  This is Fulfilment Portal which is used by store colleagues for online orders management ,Picking information ,Colleague performance details.
+   My Role is Application developer where frontend is <b>React.js, Styled component </b> and backend is <b>Node.js (express.js) </b>.
+   I have also involved in CI/CD process which involves Building <b>Docker Image</b> and Deployment of app in <b>Azure</b> cloud . 
+  </p-card>
+
   <p-card
     class="p-col-12"
     styleClass="card-container"
